# grizli

./: pyproject.toml  setup.cfg
grizli/: grismconf.py
