[metadata]
name = grizli
description = Grism analysis pipeline
author = G. Brammer
author_email = gbrammer@gmail.com
license = MIT
url = http://github.com/gbrammer/grizli
edit_on_github = False
github_project = gbrammer/grizli
install_requires = 
    numpy
    cython
    astropy
    sregion>=1.0
    astropy
    scipy
    matplotlib
    scikit-image
    scikit-learn
    pyyaml
    photutils
    pyregion
    stsci.image
    stwcs
    wfc3tools
    crds
    drizzlepac
    shapely
    git+https://github.com/benjimin/descartes.git
    boto3
    peakutils
    extinction
    tqdm
    astro-sedpy
    astro-prospector
    sep
    git+https://github.com/gbrammer/reprocess_wfc3.git
    git+https://github.com/gbrammer/eazy-py.git
    sregion>=1.0
    git+https://github.com/gbrammer/tristars.git
    mastquery>=1.4
    drizzlepac
    sep
    
description-file = README.rst
python_requires = ">=3.7"
version = 1.6.0

[options]
install_requires = numpy
zip_safe = False
use_2to3 = False

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build astropy_helpers
doctest_plus = enabled
addopts = -p no:warnings
testpaths = 
    grizli/tests

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[entry_points]
astropy-package-template-example = packagename.example_mod:main

tests = 
  pyregion
  stwcs

